v2.2.1/_sources/plugins/dhcp_services_count_info_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.dhcp_services_count_info module -- Information module for Dhcp Services Count
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.2.1).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.dhcp_services_count_info`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.17.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Dhcp Services Count. - \> Retrieves the total number of DHCP Services for given parameters. For detailed information about the usage of the API, please refer to the Open API specification document - https //github.com/cisco-en- programmability/catalyst-center-api-specs/blob/main/Assurance/CE\_Cat\_Center\_Org- DHCPServices-1.0.0-resolved.yaml.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.1.3.0.0
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-catc_api_port:

      .. rst-class:: ansible-option-title

      **catc_api_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_api_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-catc_debug:

      .. rst-class:: ansible-option-title

      **catc_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_host"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-catc_host:

      .. rst-class:: ansible-option-title

      **catc_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_password"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-catc_password:

      .. rst-class:: ansible-option-title

      **catc_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_username"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-catc_username:

      .. rst-class:: ansible-option-title

      **catc_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-catc_verify:

      .. rst-class:: ansible-option-title

      **catc_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catc_version"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-catc_version:

      .. rst-class:: ansible-option-title

      **catc_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catc_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-deviceId"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-deviceid:

      .. rst-class:: ansible-option-title

      **deviceId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-deviceId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DeviceId query parameter. The device UUID. Examples \`deviceId=6bef213c-19ca-4170-8375-b694e251101c\` (single deviceId is requested) \`deviceId=6bef213c-19ca-4170-8375-b694e251101c&deviceId=32219612-819e-4b5e-a96b-cf22aca13dd9 (multiple networkDeviceIds with & separator).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-deviceName"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-devicename:

      .. rst-class:: ansible-option-title

      **deviceName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-deviceName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DeviceName query parameter. Name of the device. This parameter supports wildcard (\`\*\`) character -based search. Example \`wnbu-sjc\*\` or \`\*wnbu-sjc\*\` or \`\*wnbu-sjc\` Examples deviceName=wnbu-sjc24.cisco.com (single device name is requested) deviceName=wnbu-sjc24.cisco.com&deviceName=wnbu-sjc22.cisco.com (multiple device names are requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-deviceSiteHierarchy"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-devicesitehierarchy:

      .. rst-class:: ansible-option-title

      **deviceSiteHierarchy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-deviceSiteHierarchy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DeviceSiteHierarchy query parameter. The full hierarchical breakdown of the site tree starting from Global site name and ending with the specific site name. The Root site is named "Global" (Ex. \`Global/AreaName/BuildingName/FloorName\`) This field supports wildcard asterisk (\`\*\`) character search support. E.g. \`\*/San\*, \*/San, /San\*\` Examples \`?siteHierarchy=Global/AreaName/BuildingName/FloorName\` (single siteHierarchy requested) \`?deviceSiteHierarchy=Global/AreaName/BuildingName/FloorName&deviceSite Hierarchy=Global/AreaName2/BuildingName2/FloorName2\` (multiple siteHierarchies requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-deviceSiteHierarchyId"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-devicesitehierarchyid:

      .. rst-class:: ansible-option-title

      **deviceSiteHierarchyId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-deviceSiteHierarchyId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DeviceSiteHierarchyId query parameter. The full hierarchy breakdown of the site tree in id form starting from Global site UUID and ending with the specific site UUID. (Ex. \`globalUuid/areaUuid/buildingUuid/floorUuid\`) This field supports wildcard asterisk (\`\*\`) character search support. E.g. \`\*uuid\*, \*uuid, uuid\*\` Examples \`?deviceSiteHierarchyId=globalUuid/areaUuid/buildingUuid/floorUuid \`(single siteHierarchyId requested) \` ?deviceSiteHierarchyId=globalUuid/areaUuid/buildingUuid/floorUuid&deviceSiteHierarchyId=globalUuid/areaU uid2/buildingUuid2/floorUuid2\` (multiple siteHierarchyIds requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-deviceSiteId"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-devicesiteid:

      .. rst-class:: ansible-option-title

      **deviceSiteId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-deviceSiteId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DeviceSiteId query parameter. The UUID of the site. (Ex. \`flooruuid\`) Examples \`?deviceSiteIds=id1\` (single id requested) \`?deviceSiteIds=id1&deviceSiteIds=id2&siteId=id3\` (multiple ids requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-endTime"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-endtime:

      .. rst-class:: ansible-option-title

      **endTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-endTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      EndTime query parameter. End time to which API queries the data set related to the resource. It must be specified in UNIX epochtime in milliseconds. Value is inclusive.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-serverIp"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-serverip:

      .. rst-class:: ansible-option-title

      **serverIp**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-serverIp" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      ServerIp query parameter. IP Address of the DHCP Server. This parameter supports wildcard (\`\*\`) character -based search. Example \`10.76.81.\*\` or \`\*56.78\*\` or \`\*50.28\` Examples serverIp=10.42.3.31 (single IP Address is requested) serverIp=10.42.3.31&serverIp=name2&fabricVnName=name3 (multiple IP Addresses are requested).
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-startTime"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-starttime:

      .. rst-class:: ansible-option-title

      **startTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-startTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`float`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      StartTime query parameter. Start time from which API queries the data set related to the resource. It must be specified in UNIX epochtime in milliseconds. Value is inclusive.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are devices.Devices.retrieves\_the\_total\_number\_of\_d\_h\_c\_p\_services\_for\_given\_parameters,
   - Paths used are get /dna/data/api/v1/dhcpServices/count,
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK

.. Seealso

See Also
--------

.. seealso::

   `Cisco DNA Center documentation for Devices RetrievesTheTotalNumberOfDHCPServicesForGivenParameters <https://developer.cisco.com/docs/dna-center/#!retrieves-the-total-number-of-dhcp-services-for-given-parameters>`_
       Complete reference of the RetrievesTheTotalNumberOfDHCPServicesForGivenParameters API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Get all Dhcp Services Count
      cisco.catalystcenter.dhcp_services_count_info:
        catc_host: "{{catc_host}}"
        catc_username: "{{catc_username}}"
        catc_password: "{{catc_password}}"
        catc_verify: "{{catc_verify}}"
        catc_api_port: "{{catc_api_port}}"
        catc_version: "{{catc_version}}"
        catc_debug: "{{catc_debug}}"
        headers: "{{my_headers | from_json}}"
        startTime: 0
        endTime: 0
        serverIp: string
        deviceId: string
        deviceName: string
        deviceSiteHierarchy: string
        deviceSiteHierarchyId: string
        deviceSiteId: string
      register: result




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-dnac_response"></div>

      .. _ansible_collections.cisco.catalystcenter.dhcp_services_count_info_module__return-dnac_response:

      .. rst-class:: ansible-option-title

      **dnac_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco CATALYST Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"count": 0}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

